k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  labels:
    app: react-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: 480294271769.dkr.ecr.us-east-2.amazonaws.com/devopsfe:latest
        ports:
        - containerPort: 3000
