k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80         # The port on which the service is exposed
      targetPort: 3000   # The port on the container to which traffic should be directed
